test/libsolidity/syntaxTests/using/using_lhs_asterisk_contract.sol
contract C {
    using * for uint;
}
// ----
// ParserError 2314: (23-24): Expected identifier but got '*'
